Add Topic lookup Metrics